--- a/src/sass/mobile.scss
+++ b/src/sass/mobile.scss
@@ -3,7 +3,7 @@
     width: auto;
     padding: 20px;
     margin: auto;
-    background: url('../img/mobile/линии.png') no-repeat bottom, linear-gradient(274.6deg, rgba(78, 77, 94, 0.24) 2.58%, #0F0C27 55.17%), radial-gradient(238.86px at -2.08% 64.75%, rgba(37, 34, 71, 0.7) 0%, #080521 100%);
+    background: url('../img/mobile/mobile-lines.png') no-repeat bottom;
     background-size: cover;    
 }
 .mobile {
