--- a/src/css/main.css
+++ b/src/css/main.css
@@ -447,14 +447,17 @@ input::-webkit-input-placeholder {
 }
 .mob-container {
   position: relative;
-  width: auto;
+  width: 100%;
   padding: 20px;
-  margin: auto;
   background: url("../img/mobile/mobile-lines.png") no-repeat bottom;
   background-size: cover;
 }
 
 .mobile {
+  display: none;
+}
+
+.mobile-window {
   display: none;
 }
 
@@ -848,13 +851,13 @@ footer {
   z-index: 10;
   cursor: pointer;
   left: 0;
-  bottom: 30%;
+  bottom: 20%;
   width: 302px;
   height: 61px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  background: linear-gradient(260.18deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 80.23%), rgba(255, 255, 255, 0.25);
+  transition: 0.5s;
 }
 
 .callback-text {
@@ -939,6 +942,17 @@ footer {
 
 .modal-active {
   transform: translateX(0%);
+}
+
+.callback-gradient-start {
+  background: linear-gradient(260.18deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 80.23%), rgba(255, 255, 255, 0.25);
+  transition: 0.5s;
+}
+
+.callback-gradient-end {
+  background: linear-gradient(110.18deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 80.23%), rgba(255, 255, 255, 0.25);
+  transition: 0.3s;
+  opacity: 0;
 }
 
 * {
@@ -1238,8 +1252,8 @@ body.mobile-popup-callback__active .mobile-popup-callback {
 
 .service-modal-footer__block {
   position: absolute;
-  bottom: 15%;
-  left: 5%;
+  bottom: 20%;
+  left: 3%;
 }
 
 .service-modal-footer__arrow {
@@ -1256,7 +1270,7 @@ body.mobile-popup-callback__active .mobile-popup-callback {
   position: absolute;
   cursor: pointer;
   top: 20%;
-  left: -7%;
+  left: -11.5%;
   transition: 0.3s;
 }
 
@@ -1282,38 +1296,6 @@ body.mobile-popup-callback__active .mobile-popup-callback {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   padding-right: 100px;
-}
-
-::-webkit-scrollbar {
-  width: 5px;
-  height: 3px;
-}
-
-::-webkit-scrollbar-button {
-  display: none;
-}
-
-::-webkit-scrollbar-track {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-::-webkit-scrollbar-track-piece {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-::-webkit-scrollbar-thumb {
-  height: 50px;
-  background-color: #FFFFFF;
-  border-radius: 3px;
-}
-
-::-webkit-scrollbar-corner {
-  background-color: #999;
-  border-radius: 50px;
-}
-
-::-webkit-resizer {
-  background-color: #666;
 }
 
 .total {
