--- a/src/sass/desktop/_hero.scss
+++ b/src/sass/desktop/_hero.scss
@@ -50,15 +50,14 @@ footer {
     z-index: 10;
     cursor: pointer;  
     left: 0;
-    bottom: 30%;
+    bottom: 20%;
     width: 302px;
     height: 61px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    background: linear-gradient(260.18deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 80.23%), rgba(255, 255, 255, 0.25);
+    transition: 0.5s;
     &-text { 
-        
         color: #252247;
     }
     &-arrow {
@@ -133,4 +132,14 @@ footer {
 }
 .modal-active {
     transform: translateX(0%);
+}
+
+.callback-gradient-start {
+    background: linear-gradient(260.18deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 80.23%), rgba(255, 255, 255, 0.25);
+    transition: 0.5s;
+}
+.callback-gradient-end {
+    background: linear-gradient(110.18deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 80.23%), rgba(255, 255, 255, 0.25);
+    transition: 0.3s;
+    opacity: 0;
 }
