--- a/src/sass/mobile.scss
+++ b/src/sass/mobile.scss
@@ -1,6 +1,6 @@
 .mob-container {
     position: relative;
-    width: 100%;
+    width: 320px;
     padding: 20px;
     background: url('../img/mobile/mobile-lines.png') no-repeat bottom;
     background-size: cover;    
